# django-project-template

./: README.md  docker-compose.yaml  pyproject.toml
docker/: Dockerfile  entrypoint.sh
project_template/project_template/: asgi.py  settings.py  urls.py  wsgi.py
